k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calctek-calc
  labels:
    app.kubernetes.io/part-of: calctek-calc
