k8s/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-service
  namespace: calctek-calc
  labels:
    app: docs
spec:
  type: ClusterIP
  selector:
    app: docs
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
